--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Data-*</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <script defer src="./index.js"></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1 class="flex-heading">flex-direction</h1>
+      <div>
+        <button class="flex-button" data-flex-direction="row">row</button>
+        <button class="flex-button" data-flex-direction="row-reverse">row-reverse</button>
+        <button class="flex-button" data-flex-direction="column">column</button>
+        <button class="flex-button" data-flex-direction="column-reverse">
+          column-reverse
+        </button>
+      </div>
+      <div id="flex-container" class="flex-container">
+        <div class="flex-child">1</div>
+        <div class="flex-child">2</div>
+        <div class="flex-child">3</div>
+        <div class="flex-child">4</div>
+      </div>
+    </div>
+  </body>
 </html>
